Tue Feb 27 22:09:39 UTC 2007 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>

 - drivers/megatec_usb.c: switched to usb_get_descriptor in
   get/set_data_krauler and removed no more needed "endpoint"
   usb_ups_t struct member.

Tue Feb 27 14:12:02 UTC 2007 / Charles Lepple <clepple@gmail.com>

 - drivers/tripplite_usb.c: adjusted Unit ID message (not all units support
   this command)
Sun Feb 25 02:51:21 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - data/driver.list: added Dynex DX-800U.
 - usbhid-ups: added new variables ups.vendorid and ups.productid
	
Sat Feb 24 17:53:31 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - autoconf: try to install hotplug and/or udev files by default. New
   configuration options --with-hotplug-dir=PATH and --with-udev-dir=PATH.

Fri Feb 23 20:02:46 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - various: use "timehead.h"

Tue Feb 20 15:53:00 UTC 2007 / Jon Gough <jon.gough@eclipsesystems.com.au>

 - drivers/megatec.c: Removed changed debugging statement left in by
   mistake.

Mon Feb 19 16:54:41 UTC 2007 / Jon Gough <jon.gough@eclipsesystems.com.au>

 - drivers/megatec_usb.c: the addition of endpoint to usb_ups_t definition.
   This allows different endpoint values for each of the supported UPSs.

Sat Feb 17 16:14:42 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/safenet.ch: the addition of "_t" to type names hides the fact that
   safenet_t is a union (removed typedef, since it is not useful anyway)

Fri Feb 16 22:51:41 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - various: EOF is not an exit code for getopt(3). 
 - drivers/main.c, drivers/main-hal.c: do not ignore extra parameters on
   the command line; print an error instead. 
	
Fri Feb 16 22:10:13 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - merged experimental megatec_usb driver to trunk. Note: still need
   to fix matching code, add man page, and update data/driver.list.
