@@ -1,3 +1,10 @@
+Sun Mar  4 19:27:39 UTC 2007 / Arjen de Korte <arjen@de-korte.org>
+
+ - configure.in: add --with-group option (defaults to "nogroup"), adds
+   RUN_AS_GROUP variable
+ - scripts/hotplug/libhidups.in: use RUN_AS_GROUP instead of RUN_AS_USER
+ - scripts/udev/nut-usbups.rules.in: use RUN_AS_GROUP instead of RUN_AS_USER
+
 Tue Feb 27 22:09:39 UTC 2007 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>
 
  - drivers/megatec_usb.c: switched to usb_get_descriptor in
